🆕 Feature: Implementado template de clientes da vibra Implementado pesquisa de placas na página da Minalba

--- a/moby/minalba/templates/pages/edit-placas-minalba.html
+++ b/moby/minalba/templates/pages/edit-placas-minalba.html
@@ -9,7 +9,7 @@
       href="{% static 'styles/styles-minalba.css' %}"
       rel="stylesheet"
     />
-    <link rel="icon" type="image/x-icon" href="{% static 'minalba/static/favicon.ico' %}">
+    <link rel="icon" type="image/x-icon" href="{% static 'global/favicon.ico' %}">
 </head>
 <body>
     
