--- a/moby/minalba/templates/pages/placas-minalba.html
+++ b/moby/minalba/templates/pages/placas-minalba.html
@@ -8,8 +8,8 @@
       href="{% static 'styles/styles-minalba.css' %}"
       rel="stylesheet"
     />
-    <link rel="icon" type="image/x-icon" href="{% static 'minalba/static/favicon.ico' %}">
-    <title>Edição de placas - Minalba</title>
+    <link rel="icon" type="image/x-icon" href="{% static 'global/favicon.ico' %}">
+    <title>Edição de placas</title>
   </head>
   <body>
     <div class="container">
