🆕 Feat: Implementado paginação na tela de placas da Minalba

--- a/moby/minalba/templates/pages/edit-placas-minalba.html
+++ b/moby/minalba/templates/pages/edit-placas-minalba.html
@@ -39,7 +39,7 @@
                     </div>
                 </div>
                 <div>
-                    <a href="/minalba/placas" class="btn-back">Voltar</a>
+                    <a href="{{ request.META.HTTP_REFERER }}" class="btn-back">Voltar</a>
                     <button type="submit" class="btn=btn-send">Enviar</button>
                 </div>
             </div>
