--- a/moby/minalba/static/styles/styles-minalba.css
+++ b/moby/minalba/static/styles/styles-minalba.css
@@ -185,3 +185,24 @@ button:hover {
   background-color: #00adee;
   color: #fff;
 }
+
+.page-links {
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+}
+
+.page-links a {
+  display: inline-block;
+  padding: 4px 16px;
+  background-color: #00adee;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 50px;
+  margin: 30px;
+}
+
+.page-links a:hover {
+  background-color: #ffffff;
+  color: #000000;
+}
