🆕 Feat: Adicionado paginação em todos os endpoints

--- a/moby/minalba/templates/pages/edit-placas-minalba.html
+++ b/moby/minalba/templates/pages/edit-placas-minalba.html
@@ -34,7 +34,7 @@
                             <option value="Indefinido" {% if placa.classificacao == None %}selected{% endif %}>Indefinido</option>
                             <option value="Fake" {% if placa.classificacao == 'Fake' %}selected{% endif %}>Fake</option>
                             <option value="Nordeste" {% if placa.classificacao == 'Nordeste' %}selected{% endif %}>Nordeste</option>
-                            <option value="Sudeste" {% if placa.classificacao == 'Sudeste' %}selectec{% endif %}>Sudeste</option>
+                            <option value="Sudeste" {% if placa.classificacao == 'Sudeste' %}selected{% endif %}>Sudeste</option>
                         </select>
                     </div>
                 </div>
