--- a/moby/vibra/templates/pages/vibra-transportadoras.html
+++ b/moby/vibra/templates/pages/vibra-transportadoras.html
@@ -58,7 +58,7 @@
             </tr>
           </thead>
           <tbody>
-            {% for t in transportadoras %}
+            {% for t in page.object_list %}
             <tr>
               <td>{{ t.transportadora_codigo_sap }}</td>
               <td>{{ t.transportadora_nome_sap|default:"" }}</td>
@@ -72,7 +72,20 @@
           </tbody>
         </table>
       </section>
+    </div>
+    <div class="page-links" id="page-links">
+      {% if page.has_previous %}
+        <a href="{% url 'transportadoras' %}?page={{page.previous_page_number}}">Anterior</a>
+      {% endif %}
 
+      {% if page.number > 1 %}
+        <p>Página {{page.number}}</p>
+      {% endif %}
+
+
+      {% if page.has_next %}
+        <a href="{% url 'transportadoras' %}?page={{page.next_page_number}}">Próximo</a>
+      {% endif %}
     </div>
   </body>
 </html>
