--- a/moby/vibra/static/styles/styles-vibra.css
+++ b/moby/vibra/static/styles/styles-vibra.css
@@ -197,3 +197,25 @@ button:hover {
   background-color: #268200;
   color: #fff;
 }
+
+.page-links {
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+}
+
+.page-links a {
+  display: inline-block;
+  padding: 4px 16px;
+  background-color: #268200;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 50px;
+  margin: 30px;
+}
+
+.page-links a:hover {
+  background-color: #ffffff;
+  color: #000000;
+}
+
