--- a/moby/vibra/templates/pages/vibra-clientes.html
+++ b/moby/vibra/templates/pages/vibra-clientes.html
@@ -52,7 +52,7 @@
             </tr>
           </thead>
           <tbody>
-            {% for c in clientes %}
+            {% for c in page.object_list %}
             <tr>
               <td>{{c.codigo}}</td>
               <td>{{c.nome}}</td>
@@ -67,7 +67,20 @@
           </tbody>
         </table>
       </section>
+    </div>
+    <div class="page-links" id="page-links">
+      {% if page.has_previous %}
+        <a href="{% url 'clientes' %}?page={{page.previous_page_number}}">Anterior</a>
+      {% endif %}
 
+      {% if page.number > 1 %}
+        <p>Página {{page.number}}</p>
+      {% endif %}
+
+
+      {% if page.has_next %}
+        <a href="{% url 'clientes' %}?page={{page.next_page_number}}">Próximo</a>
+      {% endif %}
     </div>
   </body>
 </html>
