--- a/moby/vibra/templates/pages/vibra-produtos.html
+++ b/moby/vibra/templates/pages/vibra-produtos.html
@@ -63,16 +63,15 @@
     </div>
     <div class="page-links" id="page-links">
       {% if page.has_previous %}
-        <a href="{% url 'produtos' %}?page={{page.previous_page_number}}">Anterior</a>
+          <a href="{% url 'produtos' %}?page={{page.previous_page_number}}&search-name={{ search_name }}">Anterior</a>
       {% endif %}
-
+  
       {% if page.number > 1 %}
-        <p>Página {{page.number}}</p>
+          <p>Página {{page.number}}</p>
       {% endif %}
-
-
+  
       {% if page.has_next %}
-        <a href="{% url 'produtos' %}?page={{page.next_page_number}}">Próximo</a>
+          <a href="{% url 'produtos' %}?page={{page.next_page_number}}&search-name={{ search_name }}">Próximo</a>
       {% endif %}
     </div>
   </body>
