--- a/moby/vibra/templates/pages/vibra-clientes.html
+++ b/moby/vibra/templates/pages/vibra-clientes.html
@@ -70,16 +70,15 @@
     </div>
     <div class="page-links" id="page-links">
       {% if page.has_previous %}
-        <a href="{% url 'clientes' %}?page={{page.previous_page_number}}">Anterior</a>
+          <a href="{% url 'clientes' %}?page={{page.previous_page_number}}&search-name={{ search_name }}&drop={{ search_inbound }}">Anterior</a>
       {% endif %}
-
+  
       {% if page.number > 1 %}
-        <p>Página {{page.number}}</p>
+          <p>Página {{page.number}}</p>
       {% endif %}
-
-
+  
       {% if page.has_next %}
-        <a href="{% url 'clientes' %}?page={{page.next_page_number}}">Próximo</a>
+          <a href="{% url 'clientes' %}?page={{page.next_page_number}}&search-name={{ search_name }}&drop={{ search_inbound }}">Próximo</a>
       {% endif %}
     </div>
   </body>
