--- a/moby/vibra/templates/pages/vibra-transportadoras.html
+++ b/moby/vibra/templates/pages/vibra-transportadoras.html
@@ -75,16 +75,15 @@
     </div>
     <div class="page-links" id="page-links">
       {% if page.has_previous %}
-        <a href="{% url 'transportadoras' %}?page={{page.previous_page_number}}">Anterior</a>
+          <a href="{% url 'transportadoras' %}?page={{page.previous_page_number}}&search-cod={{ search_cod }}&search-grupo={{ search_grupo }}&search-nome={{ search_name }}">Anterior</a>
       {% endif %}
-
+  
       {% if page.number > 1 %}
-        <p>Página {{page.number}}</p>
+          <p>Página {{page.number}}</p>
       {% endif %}
-
-
+  
       {% if page.has_next %}
-        <a href="{% url 'transportadoras' %}?page={{page.next_page_number}}">Próximo</a>
+          <a href="{% url 'transportadoras' %}?page={{page.next_page_number}}&search-cod={{ search_cod }}&search-grupo={{ search_grupo }}&search-nome={{ search_name }}">Próximo</a>
       {% endif %}
     </div>
   </body>
