--- a/moby/vibra/templates/pages/vibra-transportadoras.html
+++ b/moby/vibra/templates/pages/vibra-transportadoras.html
@@ -83,7 +83,7 @@
       {% endif %}
   
       {% if page.has_next %}
-          <a href="{% url 'transportadoras' %}?page={{page.next_page_number}}&search-cod={{ search_cod }}&search-grupo={{ search_grupo }}&search-nome={{ search_name }}">Próximo</a>
+          <a href="{% url 'transportadoras' %}?page={{page.next_page_number}}&search-cod={{ search_cod|default:'' }}&search-grupo={{ search_grupo|default:'' }}&search-nome={{ search_name|default:'' }}">Próximo</a>
       {% endif %}
     </div>
   </body>
