--- a/moby/vibra/templates/pages/vibra-clientes.html
+++ b/moby/vibra/templates/pages/vibra-clientes.html
@@ -80,7 +80,7 @@
     </div>
     <div class="page-links" id="page-links">
       {% if page.has_previous %}
-          <a href="{% url 'clientes' %}?page={{page.previous_page_number}}&search-name={{ search_name }}&drop={{ search_inbound }}">Anterior</a>
+          <a href="{% url 'clientes' %}?page={{page.previous_page_number}}&search-name={{ search_name }}&search-modelo={{ search_modelo|default:'' }}&drop={{ search_inbound }}">Anterior</a>
       {% endif %}
   
       {% if page.number > 1 %}
@@ -88,7 +88,7 @@
       {% endif %}
   
       {% if page.has_next %}
-          <a href="{% url 'clientes' %}?page={{page.next_page_number}}&search-name={{ search_name|default:'' }}&drop={{ search_inbound|default:'' }}">Próximo</a>
+          <a href="{% url 'clientes' %}?page={{page.next_page_number}}&search-name={{ search_name|default:'' }}&search-modelo={{ search_modelo|default:'' }}&drop={{ search_inbound|default:'' }}">Próximo</a>
       {% endif %}
     </div>
   </body>
