--- a/moby/vibra/templates/pages/edit-clientes.html
+++ b/moby/vibra/templates/pages/edit-clientes.html
@@ -19,7 +19,7 @@
                         <label for="codigo" class="label-edit">Código:</label>
                     </div>
                     <div class="input-form">
-                        <input type="text" name="codigo" id="codigo" placeholder="Código" class="form-control" value="{{cliente.codigo}}" readonly>
+                        <input type="text" name="codigo" id="codigo" placeholder="Código" class="form-control" value="{{cliente.codigo_sap}}" readonly>
                     </div>
                 </div>
                 <div class="value-read">
@@ -27,7 +27,7 @@
                         <label for="codigo" class="label-edit">Nome:</label>
                     </div>
                     <div class="input-form">
-                        <input type="text" name="nome" id="nome" placeholder="Nome" class="form-control" value="{{cliente.nome}}" readonly>
+                        <input type="text" name="nome" id="nome" placeholder="Nome" class="form-control" value="{{cliente.nome_sap}}" readonly>
                     </div>
                 </div>
                 <div class="value">
